--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.9",
+    "@react-navigation/drawer": "^7.7.1",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.4.10",
     "@supabase/supabase-js": "^2.76.1",
