--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "@react-navigation/stack": "^7.4.10",
     "@supabase/supabase-js": "^2.76.1",
     "expo": "~54.0.13",
+    "expo-print": "~15.0.7",
+    "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-qrcode-svg": "^6.3.20",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.14.0",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "^0.5.1"
   },
